<resources>
    <string name="app_name">JMCMCalculator</string>
    <string name="calculator_name">JMCM Calculator</string>
    <string name="number_request">Type in a number</string>
    <string name="sum">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="equals">= (result)</string>
    <string name="clearLast">Cear screen last digit</string>
    <string name="clrAll">Clear screen</string>
    <string name="clearCalc">Clear result</string>
    <string name="zero">0</string>
    <string name="percent">%</string>
    <string name="rSquare">√</string>
    <string name="poten2">x^2</string>
    <string name="inverse">1/x</string>
    <string name="tenPot">10^x</string>
    <string name="log10">log10</string>
    <string name="logs">history log</string>
    <string name="clearLogs">clear history log</string>


</resources>
