<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/science"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:text="@string/calculator_name"
        android:textSize="32dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@android:color/white"/>


    <EditText
        android:id="@+id/writeHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        android:ems="10"
        android:text="0"
        android:inputType="numberSigned"
        android:padding="8dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        android:textAlignment="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeHere"
        tools:layout_editor_absoluteY="257dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="sum"
                android:text="@string/sum"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="minus"
                android:text="@string/minus"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="multiply"
                android:text="@string/multiply"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/divide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="divide"
                android:text="@string/divide"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/equals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="result"
            android:text="@string/equals" />

        <Button
            android:id="@+id/clearLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/clearAll"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="clearLast"
            android:text="@string/clearLast" />

        <Button
            android:id="@+id/clearAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/equals"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:onClick="clearAll"
            android:text="@string/clearAll" />

        <TextView
            android:id="@+id/display"
            android:layout_width="392dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/clearLast"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:padding="16dp"
            android:text="0"
            android:textAlignment="textEnd" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>